<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".QuizActivity"
    tools:ignore="UsingOnclickInXml">

    <TextView
        android:id="@+id/countLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count_label"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/questionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/question_label"
        android:textSize="24sp" />

    <Button
        android:id="@+id/answerBtn1"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:onClick="checkAnswer"
        android:text="@string/btn_answer" />

    <Button
        android:id="@+id/answerBtn2"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="6dp"
        android:onClick="checkAnswer"
        android:text="@string/btn_answer" />

    <Button
        android:id="@+id/answerBtn3"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="6dp"
        android:onClick="checkAnswer"
        android:text="@string/btn_answer"/>

    <Button
        android:id="@+id/answerBtn4"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="6dp"
        android:onClick="checkAnswer"
        android:text="@string/btn_answer" />

</LinearLayout>